--- a/app/src/main/res/layout/whatarepronouns.xml
+++ b/app/src/main/res/layout/whatarepronouns.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Situational role"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="A pronoun is when you refer to an individual who carries out an action, abstractly or non-abstractly. Pronouns allow to refer to a male as 'he', and a female as 'she' in English. When water falls from the sky, 'it' rains.\n\nPronouns can be possessive  ('my'), personal ('I'), relative ('...who...'), reflexive ('myself'), and many other groups which you'll be introduced to in this topic."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Replacement"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="Pronouns also allow the replacing of someone or something's name in a known context to a pronoun.\n\nFor example, 'Jim did well in his exams. He is happy about his results.'\n\nIn the above example, the name 'Jim' was replaced by the pronoun 'he' in order to prevent the repeating of his name over and over again."/>
 
         <View
             android:layout_width="fill_parent"
