--- a/app/src/main/res/layout/whatareverbs.xml
+++ b/app/src/main/res/layout/whatareverbs.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Action!"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="Verbs allow a sentence to carry an action, or doing, that gives a meaning to what someone is doing. Verbs are needed in every sentence. A sentence cannot make sense without having a verb."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Tense"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,35 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="Verbs carry tense. Tense is the time in which an action is carried out. A verb can be already completed ('I downloaded this app'), or exist in the future ('I will download this app'), or anything in between. Analyse when you're talking to someone or reading something, and interpret the various times expressed."/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Mood"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Mood is the attitude associated with the speaker and verb. There are three moods - indicative ('Should I sit?'/'I'm sitting over here'), imperative ('Sit down!') and subjunctive ('If I were to sit...'). They all express the nature of the action carried out."/>
 
         <View
             android:layout_width="fill_parent"
