--- a/app/src/main/res/layout/whatisaclause.xml
+++ b/app/src/main/res/layout/whatisaclause.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Word grouping"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="A clause is a group of words that contain all of the main aspects in order to make a meaningful part of a sentence. A clause is not the same as being a phrase. A phrase in a fragment of a clause ('getting used of it', 'in the evening'). A clause contains a subject, a verb and may also contain objects."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Types of clauses"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="There are two types of clauses: subordinate and independent. Each have their own times of use and will be explicitly shown how they differ in use."/>
 
         <View
             android:layout_width="fill_parent"
