--- a/app/src/main/res/layout/whatisanoun.xml
+++ b/app/src/main/res/layout/whatisanoun.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Person, Place, Thing"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="A noun is a thing that can be rela or abstract. Every item around you is a noun. Every place you've been to is a noun. Every emotion you feel is a noun. Nouns form families in Irish and many other languages depending on their meaning, and also on their sounds. These are called declensions and are very important at working out how a word changes in its context."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Types of nouns"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="There are three groups of nouns outside of declensions, generally speaking. A nouns can be common (chair, table, book), proper (Dublin, New York, London), collective (choir, team, regiment), compound (pickpocket, paperclip), or abstract (anger, happiness, desire)"/>
 
         <View
             android:layout_width="fill_parent"
