--- a/app/src/main/res/layout/whatisaprep.xml
+++ b/app/src/main/res/layout/whatisaprep.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Governing location"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="A preposition is a word that appears before a noun to indicate a relationship between two or more objects. Prepositions take different cases depending on whether or not they are moving, or the nature of the locational relationship they are describing."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Role"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,19 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="A preposition is important in constructing sentences that portray location. There are many prepositions in English and Irish. Some languages (such as Finnish or Turkish) don't use prepositions, and instead change the ending of a word to show a quality:"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Finnish\ntalossa, talosta, taloonsa, talolla, talolta, talolle\n\nIrish\nsa teach, amach ón teach, isteach sa teach, ag an teach, ó theach, chuig an teach\n\nEnglish\nin the house, out of the house, to the house, at the house, from a house, towards the house"/>
 
         <View
             android:layout_width="fill_parent"
