--- a/app/src/main/res/layout/whatismutation.xml
+++ b/app/src/main/res/layout/whatismutation.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Initial changes"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="Mutation is a feature that is unique to Celtic languages. It is the changing of sound at the start of a word due to its context, and is the result of the many strange looking sounds that are visible in Irish as a new learner by use of eclipsis or lenition.\n\nAll Celtic languages use mutations to make pronunciation easier; such as Welsh for example."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="When is it used?"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="Mutations are used with prepositions, possession, cases, inflection, tense, mood and most grammatical areas in Irish; so it is impossible to not use it."/>
 
         <View
             android:layout_width="fill_parent"
